--- a/Crawford Group Projects/.settings/org.eclipse.cdt.core.prefs
+++ b/Crawford Group Projects/.settings/org.eclipse.cdt.core.prefs
@@ -1,7 +1,7 @@
 eclipse.preferences.version=1
 environment/project/cdt.managedbuild.toolchain.gnu.mingw.base.383437357/MINGW_HOME/delimiter=;
 environment/project/cdt.managedbuild.toolchain.gnu.mingw.base.383437357/MINGW_HOME/operation=replace
-environment/project/cdt.managedbuild.toolchain.gnu.mingw.base.383437357/MINGW_HOME/value=C\:\\mingw64\\mingw64
+environment/project/cdt.managedbuild.toolchain.gnu.mingw.base.383437357/MINGW_HOME/value=D\:\\MinGW64\\mingw32
 environment/project/cdt.managedbuild.toolchain.gnu.mingw.base.383437357/MSYS_HOME/delimiter=;
 environment/project/cdt.managedbuild.toolchain.gnu.mingw.base.383437357/MSYS_HOME/operation=remove
 environment/project/cdt.managedbuild.toolchain.gnu.mingw.base.383437357/MSYS_HOME/value=C\:\\MinGW\\msys\\1.0
