Making sure everything works

--- a/Crawford Group Projects/Makefile
+++ b/Crawford Group Projects/Makefile
@@ -1,18 +1,19 @@
+include paths.mk
 include defs.mk
 
 
 all:
-	$(MAKE) -C ./Memory
-	$(MAKE) -C ./Calculations
-	$(MAKE) -C ./Molecule
-	$(MAKE) -C ./Input_Output
-	ld -r -o libmolecule.dll calculations.o molecule.o io.o
-	$(MAKE) -C ./Geometry
-	$(MAKE) -C ./Harmonics
-	$(MAKE) -C ./SCF
-	$(MAKE) -C ./MP2
-	$(MAKE) -C ./CCSD
-	$(MAKE) -C ./DIIS
+	$(MAKE) -C ./Memory -I ../
+	$(MAKE) -C ./Calculations -I ../
+	$(MAKE) -C ./Molecule -I ../
+	$(MAKE) -C ./Input_Output -I ../
+	ld -r -o molecule.dll calculations.o molecule.o io.o
+	$(MAKE) -C ./Geometry -I ../
+	$(MAKE) -C ./Harmonics -I ../
+	$(MAKE) -C ./SCF -I ../
+	$(MAKE) -C ./MP2 -I ../
+	$(MAKE) -C ./CCSD -I ../
+	$(MAKE) -C ./DIIS -I ../
 #	$(MAKE) -C ./Symmetry
 	
 clean:
