Modifying so it works on my machine

--- a/Crawford Group Projects/Geometry/Makefile
+++ b/Crawford Group Projects/Geometry/Makefile
@@ -1,6 +1,4 @@
 include ../defs.mk
 
 main:
-	gcc $(CFLAGS) -o ../main main.c -lm -I C:\lapack\include -L ../ -lmolecule \
-	-L C:\lapack\bin -L C:\lapack\lib -lcblas -llapacke \
-	-llapack -lblas -lgfortran -L../../Free -lmemory
+	gcc $(CFLAGS) -o ../main main.c $(LIBS)
