--- a/Crawford Group Projects/Makefile
+++ b/Crawford Group Projects/Makefile
@@ -7,7 +7,7 @@ all:
 	$(MAKE) -C ./Calculations -I ../
 	$(MAKE) -C ./Molecule -I ../
 	$(MAKE) -C ./Input_Output -I ../
-	ld -r -o molecule.dll calculations.o molecule.o io.o
+	ld -r -soname libmolecule.dll calculations.o molecule.o io.o
 	$(MAKE) -C ./Geometry -I ../
 	$(MAKE) -C ./Harmonics -I ../
 	$(MAKE) -C ./SCF -I ../
