--- a/Crawford Group Projects/Memory/Makefile
+++ b/Crawford Group Projects/Memory/Makefile
@@ -5,4 +5,4 @@ all:
 	$(CC) -g3 -ggdb -c -o alloc.o alloc.c
 	$(CC) -g3 -ggdb -c -o free.o free.c
 	$(CC) -g3 -ggdb -c -o contig.o contig.c
-	$(CC) -shared -o ../memory.dll contig.o alloc.o free.o
+	$(CC) -shared -o ../libmemory.dll contig.o alloc.o free.o
