Got it to compile.

--- a/Crawford Group Projects/Makefile
+++ b/Crawford Group Projects/Makefile
@@ -3,17 +3,17 @@ include defs.mk
 
 
 all:
-	$(MAKE) -C ./Memory -I ../
-	$(MAKE) -C ./Calculations -I ../
-	$(MAKE) -C ./Molecule -I ../
-	$(MAKE) -C ./Input_Output -I ../
-	ld -r -soname libmolecule.dll calculations.o molecule.o io.o
-	$(MAKE) -C ./Geometry -I ../
-	$(MAKE) -C ./Harmonics -I ../
-	$(MAKE) -C ./SCF -I ../
-	$(MAKE) -C ./MP2 -I ../
-	$(MAKE) -C ./CCSD -I ../
-	$(MAKE) -C ./DIIS -I ../
+	$(MAKE) -B -C ./Memory
+	$(MAKE) -B -C ./Calculations
+	$(MAKE) -B -C ./Molecule
+	$(MAKE) -B -C ./Input_Output
+	ld -r -soname molecule.dll calculations.o molecule.o io.o
+	$(MAKE) -C ./Geometry
+#	$(MAKE) -C ./Harmonics
+#	$(MAKE) -C ./SCF
+#	$(MAKE) -C ./MP2
+#	$(MAKE) -C ./CCSD
+#	$(MAKE) -C ./DIIS
 #	$(MAKE) -C ./Symmetry
 	
 clean:
