--- a/Crawford Group Projects/.cproject
+++ b/Crawford Group Projects/.cproject
@@ -3,6 +3,33 @@
 	<storageModule moduleId="org.eclipse.cdt.core.settings">
 		<cconfiguration id="cdt.managedbuild.toolchain.gnu.mingw.base.383437357">
 			<storageModule buildSystemId="org.eclipse.cdt.managedbuilder.core.configurationDataProvider" id="cdt.managedbuild.toolchain.gnu.mingw.base.383437357" moduleId="org.eclipse.cdt.core.settings" name="Default">
+				<macros>
+					<stringMacro name="Path" type="VALUE_TEXT" value="C:/Program Files/Java/jre1.8.0_161/bin/server;C:/Program Files/Java/jre1.8.0_161/bin;C:/Program Files/Java/jre1.8.0_161/lib/amd64;D:\NVidia\bin;D:\NVidia\libnvvp;C:\ProgramData\Oracle\Java\javapath;C:\Windows\system32;C:\Windows;C:\Windows\System32\Wbem;C:\Windows\System32\WindowsPowerShell\v1.0\;C:\Program Files (x86)\NVIDIA Corporation\PhysX\Common;C:\WINDOWS\system32;C:\WINDOWS;C:\WINDOWS\System32\Wbem;C:\WINDOWS\System32\WindowsPowerShell\v1.0\;C:\Program Files\dotnet\;D:\CMake\bin;D:\IntelPython\Python2\;D:\IntelPython\Python2\Scripts;D:\IntelPython\Python3\;D:\IntelPython\Python3\Scripts;D:\Lapack\include;D:\Lapack\bin;C:\Users\Connor\AppData\Local\Microsoft\WindowsApps;C:\Users\Connor\AppData\Local\GitHubDesktop\bin;C:\Users\Connor\AppData\Local\Microsoft\WindowsApps;D:\MinGW64\mingw32\bin;D:\freeglut\bin\x64;D:\freeglut\include;D:\freeglut\lib\x64;;D:\IntelPython\Python2;D:\IntelPython\Python2\Scripts;D:\eclipse;"/>
+					<stringListMacro name="PATH" type="VALUE_TEXT_LIST">
+						<value name="${MINGW_HOME}\bin"/>
+						<value name="C:\ProgramData\Oracle\Java\javapath"/>
+						<value name="C:\Program Files (x86)\Intel\iCLS Client\"/>
+						<value name="C:\Program Files\Intel\iCLS Client\"/>
+						<value name="C:\WINDOWS\system32"/>
+						<value name="C:\WINDOWS"/>
+						<value name="C:\WINDOWS\System32\Wbem"/>
+						<value name="C:\WINDOWS\System32\WindowsPowerShell\v1.0\"/>
+						<value name="C:\Program Files (x86)\Intel\Intel(R) Management Engine Components\DAL"/>
+						<value name="C:\Program Files\Intel\Intel(R) Management Engine Components\DAL"/>
+						<value name="C:\Program Files (x86)\Intel\Intel(R) Management Engine Components\IPT"/>
+						<value name="C:\Program Files\Intel\Intel(R) Management Engine Components\IPT"/>
+						<value name="C:\Program Files\Intel\WiFi\bin\"/>
+						<value name="C:\Program Files\Common Files\Intel\WirelessCommon\"/>
+						<value name="C:\Users\cgbri\AppData\Local\Microsoft\WindowsApps"/>
+						<value name="C:\texlive\2017\bin\win32"/>
+						<value name="C:\Users\cgbri\AppData\Local\GitHubDesktop\bin"/>
+						<value name="C:\MinGW\bin"/>
+						<value name="C:\Users\cgbri\eclipse-workspace\"/>
+						<value name="C:\Program Files\CMake\bin"/>
+						<value name="C:\lapack\bin"/>
+					</stringListMacro>
+					<stringMacro name="MINGW_HOME" type="VALUE_TEXT" value="D:\MinGW64\mingw32"/>
+				</macros>
 				<externalSettings/>
 				<extensions>
 					<extension id="org.eclipse.cdt.core.PE" point="org.eclipse.cdt.core.BinaryParser"/>
