It finally works under Ubuntu.

--- a/Crawford Group Projects/Makefile
+++ b/Crawford Group Projects/Makefile
@@ -1,8 +1,12 @@
+include paths.mk
 include defs.mk
 include targets.mk
 
 #This is the python command to use to initialize the build environment.
 PYTHON=python3
+
+#Other commands
+CC=gcc
 
 #This is the recipe to initialize the build environment. It works.
 .PHONY: init_makefile
@@ -28,12 +32,13 @@ objs$(ARCH_SUFF): $(ARCH_OBJS)
 	$(AR) -cr $@ $?
 	
 #This works.
-$(ARCH_OBJS:$(OBJ_SUFF)=.c): 
+$(ARCH_OBJS): $(ARCH_OBJS:$(OBJ_SUFF)=.c)
 	$(CC) -c -o $@ $(subst $(OBJ_SUFF),.c, $@) $(DEFINES) $(INCLUDES) 
 
 #Compiles fine. Now complete the command line.
 $(SOURCES): $(EXEC_DEPS)
-	$(CC) $@ $+ $(CFLAGS) $(LDFLAGS) $(DEFINES) $(INCLUDES)
+	$(CC) -o $(subst .c,$(EXEC_SUFF),$@) $@ $+ $(CFLAGS) $(LDFLAGS) $(DEFINES) $(INCLUDES)
+	@echo $@
 
 
 	
