Started to remove the dependence on python.

--- a/Crawford Group Projects/Makefile
+++ b/Crawford Group Projects/Makefile
@@ -1,5 +1,5 @@
 include ./local_build/paths.mk
-include ./local_build/defs.mk
+include defs.mk
 include targets.mk
 
 #This is the python command to use to initialize the build environment.
