--- a/Cpp Computational Chemistry/Makefile
+++ b/Cpp Computational Chemistry/Makefile
@@ -1,6 +1,7 @@
 
 include base.mk
 include paths.mk
+include calculations.mk
 include defs.mk
 include targets.mk
 
@@ -27,15 +28,16 @@ purge:
 	$(RM) *.exe
 	$(RM) *.dll
 	
+calculations$(ARCH_SUFF): $(CALC_OBJECTS)
+	$(AR) -cr $@ $^
 chem$(ARCH_SUFF): $(CHEM_OBJECTS)
 	$(AR) -cr $@ $^
 base$(ARCH_SUFF): $(BASE_OBJECTS)
 	$(AR) -cr $@ $^
 	
 	
-$(BASE_OBJECTS) $(CHEM_OBJECTS): $(BASE_SOURCES) $(CHEM_SOURCES)
+$(BASE_OBJECTS) $(CHEM_OBJECTS) $(CALC_OBJECTS): $(BASE_SOURCES) $(CHEM_SOURCES) $(CALC_SOURCES)
 	$(CC) $(CFLAGS) -c -o $@ $(subst $(OBJ_SUFF),.cpp,$@) $(DEFINES) $(INCLUDES)
 	
-$(BASE_SOURCES) $(CHEM_SOURCES):
-#	$(CC) $(CFLAGS) -c -o $(subst .cpp,$(OBJ_SUFF),$@) $@ $(DEFINES) $(INCLUDES)
+$(BASE_SOURCES) $(CHEM_SOURCES) $(CALC_SOURCES):
 	
