--- a/Cpp Computational Chemistry/Makefile
+++ b/Cpp Computational Chemistry/Makefile
@@ -35,9 +35,11 @@ chem$(ARCH_SUFF): $(CHEM_OBJECTS)
 base$(ARCH_SUFF): $(BASE_OBJECTS)
 	$(AR) -cr $@ $^
 	
-	
-$(BASE_OBJECTS) $(CHEM_OBJECTS) $(CALC_OBJECTS): $(BASE_SOURCES) $(CHEM_SOURCES) $(CALC_SOURCES)
+$(EXECS): $(SOURCES) $(OBJECTS)
+	$(CC) $(CFLAGS) -o $@ $(subst $(EXEC_SUFF),.cpp,$@) $(OBJECTS) $(DLLS) $(DEFINES) $(INCLUDES) $(LDFLAGS)
+
+$(BASE_OBJECTS) $(CHEM_OBJECTS) $(CALC_OBJECTS) ./Main/main$(OBJ_SUFF): $(BASE_SOURCES) $(CHEM_SOURCES) $(CALC_SOURCES) ./Main/main.cpp
 	$(CC) $(CFLAGS) -c -o $@ $(subst $(OBJ_SUFF),.cpp,$@) $(DEFINES) $(INCLUDES)
 	
-$(BASE_SOURCES) $(CHEM_SOURCES) $(CALC_SOURCES):
+$(BASE_SOURCES) $(CHEM_SOURCES) $(CALC_SOURCES) $(SOURCES) ./Main/main.cpp:
 	
